feature: sequential selection support for mixed models in CH